--- a/index.html
+++ b/index.html
@@ -149,10 +149,10 @@
             </section>
             <!--Links-->
             <section>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
+                <a target="_bLank" href="https://chris-kherk.github.io/Buy-Zopiclone-19/">https://chris-kherk.github.io/Buy-Zopiclone-19/</a><br>
+                <a target="_bLank" href="https://baaykherkroldanseo.s3.us-east-005.backblazeb2.com/Buy+Zopiclone/Buy+Zopiclone-19/index.html">https://baaykherkroldanseo.s3.us-east-005.backblazeb2.com/Buy+Zopiclone/Buy+Zopiclone-19/index.html</a><br>
+                <a target="_bLank" href="https://kradscloudstack.s3.ap-northeast-1.amazonaws.com/Buy+Zopiclone/Buy+Zopiclone-19/index.html">https://kradscloudstack.s3.ap-northeast-1.amazonaws.com/Buy+Zopiclone/Buy+Zopiclone-19/index.html</a><br>
+                <a target="_bLank" href="https://wondrous-sundae-b8657f.netlify.app">https://wondrous-sundae-b8657f.netlify.app</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
